--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "castv2-client": "^1.1.2",
+    "dotenv": "^8.2.0",
     "express": "^4.14.0",
-    "google-tts-api": "0.0.2",
+    "google-tts-api": "0.0.4",
     "mdns": "^2.3.3",
-    "ngrok": "^2.2.4"
+    "ngrok": "^3.2.7"
   }
 }
