--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "body-parser": "^1.15.2",
     "castv2-client": "^1.1.2",
     "dotenv": "^8.2.0",
