--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "castv2-client": "^1.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.14.0",
+    "express-basic-auth": "^1.2.0",
     "google-tts-api": "0.0.4",
     "mdns": "^2.3.3",
     "ngrok": "^3.2.7"
